<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/urlTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/urlTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/urlEditText"
        app:layout_constraintBaseline_toBaselineOf="@id/urlEditText"/>
    <EditText
        android:id="@+id/urlEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/url"
        app:layout_constraintLeft_toRightOf="@id/urlTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        android:inputType="textUri" />
    <Button
        android:id="@+id/infoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urlEditText"
        app:layout_constraintBottom_toTopOf="@id/fileSizeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/infoButton"/>
    <TextView
        android:id="@+id/fileSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fileSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoButton"/>
    <TextView
        android:id="@+id/sizeValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/infoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fileSizeTextView"/>
    <TextView
        android:id="@+id/fileTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fileSizeTextView"
        android:text="@string/fileType"/>
    <TextView
        android:id="@+id/typeValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/sizeValueTextView"
        app:layout_constraintStart_toEndOf="@id/fileTypeTextView"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/downloadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/typeValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/downloadButton"/>
    <TextView
        android:id="@+id/downloadedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloaded"
        app:layout_constraintTop_toBottomOf="@id/downloadButton"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/downloadedValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/downloadedTextView"
        app:layout_constraintStart_toEndOf="@id/downloadedTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/downloadedTextView"/>
    <ProgressBar
        android:id="@+id/downloadProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/downloadedTextView"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>